--- a/crm-project-front/src/app/components/projects/projects.component.html
+++ b/crm-project-front/src/app/components/projects/projects.component.html
@@ -1,5 +1,6 @@
+
 <div class="row container-fluid p-3">
-    <div class="col-4 " *ngFor="let item of projects , let i = index" >
+    <div class="col-12 col-lg-4 " *ngFor="let item of projects , let i = index" >
         <div class="card p-2">
             <a routerLink="/projects/{{item._id}}">
                 <img src={{baseUrl+item.projectImages[0]}} height="400" class="card-img-top">
@@ -17,5 +18,6 @@
                </div>
         </div>
     </div>
-</div>
+</div> 
+<div class="row d-flex col-12 justify-content-center align-items-center p-3"><a class="col-12 col-lg-2 btn btn-dark" routerLink="/addproject">Add Project</a></div>
     
