--- a/crm-project-front/src/app/components/register/register.component.html
+++ b/crm-project-front/src/app/components/register/register.component.html
@@ -60,7 +60,7 @@
 
                 <div class="d-flex justify-content-center">
                   <button type="submit"
-                    class="btn btn-dark btn-block btn-lg gradient-custom-4 text-success">Add User</button>
+                    class="btn btn-dark btn-block btn-lg gradient-custom-4">Add User</button>
                 </div>
 
               </form>
