--- a/crm-project-front/src/app/components/add-unit/add-unit.component.html
+++ b/crm-project-front/src/app/components/add-unit/add-unit.component.html
@@ -1,35 +1,34 @@
-<div class="ontainer p-3">
-    <div class="card bg-light p-3">
-        <h2 class="text-uppercase text-center mb-5">Add Project</h2>
-        <form class="row">
-            <div class="form-outline col-12 col-lg-6 p-2">
-                <input type="text" class="form-control form-control-lg" placeholder="Project Name">
-            </div>
-            <div class="form-outline col-12 col-lg-6 p-2">
-                <input type="text" class="form-control form-control-lg" placeholder="Location">
+<div class="ontainer p-3 d-flex justify-content-center">
+    <div class="card bg-light col-12 col-lg-6 p-3">
+        <h2 class="text-uppercase text-center mb-5">Add Unit</h2>
+        <div class="alert alert-danger text-center" *ngIf="errFlag"><h6>{{errMessage}}</h6></div>
+        <div class="alert alert-success text-center" *ngIf="successFlag"><h6>{{successMessage}}</h6></div>
+        <form class="row" [formGroup]="unitForm" (ngSubmit)="onSubmit()">
+            <div class="form-outline col-12 p-2">
+                <input type="text" class="form-control form-control-lg" formControlName="unitNum" placeholder="Unit Number">
+                <div class="alert alert-danger" *ngIf="submitFlag && Data?.['unitNum']?.errors?.['required']">Required</div>
             </div>
             <div class="form-outline col-12 p-2">
-                <textarea name="" class="form-control form-control-lg" placeholder="Description"></textarea>
-            </div>
-            <div class="form-outline col-12 col-lg-4 p-2">
-                <input type="text" class="form-control form-control-lg" placeholder="Number of Buldings">
-            </div>
-            <div class="form-outline col-12 col-lg-4 p-2">
-                <input type="text" class="form-control form-control-lg" placeholder="Number of floors in each bulding">
-            </div>
-            <div class="form-outline col-12 col-lg-4 p-2">
-                <select name="" class="form-control form-control-lg">
-                    <option value="" disabled selected>Project Type</option>
-                    <option value="">For Sale</option>
-                    <option value="">For Show</option>
-                </select>
+                <textarea name="" class="form-control form-control-lg" formControlName="unitDescription" placeholder="Description"></textarea>
+                <div class="alert alert-danger" *ngIf="submitFlag && Data?.['unitDescription']?.errors?.['required']">Required</div>
             </div>
             <div class="form-outline col-12 col-lg-6 p-2">
-                <input type="file" class="form-control form-control-lg" placeholder="" multiple>
+                <input type="text" class="form-control form-control-lg" formControlName="unitSize" placeholder="Size">
+                <div class="alert alert-danger" *ngIf="submitFlag && Data?.['unitSize']?.errors?.['required']">Required</div>
+                <div class="alert alert-danger" *ngIf="(submitFlag || Data?.['unitSize']?.dirty) && Data?.['unitSize']?.errors?.['pattern']">Please Enter a Valid Numder</div>
+            </div>
+            <div class="form-outline col-12 col-lg-6 p-2">
+                <input type="text" class="form-control form-control-lg" formControlName="price" placeholder="Price">
+                <div class="alert alert-danger" *ngIf="submitFlag && Data?.['price']?.errors?.['required']">Required</div>
+                <div class="alert alert-danger" *ngIf="(submitFlag || Data?.['price']?.dirty) && Data?.['price']?.errors?.['pattern']">Required</div>
+            </div>
+            <div class="form-outline col-12 p-2">
+                <input type="file" class="form-control form-control-lg" formControlName="images" placeholder="" multiple (change)="imageUpload($event)">
+                <div class="alert alert-danger" *ngIf="submitFlag && Data?.['images']?.errors?.['required']">Required</div>
             </div>
             <div class="d-flex justify-content-center">
                 <button type="submit"
-                  class="btn btn-dark btn-block btn-lg gradient-custom-4">Add Project</button>
+                  class="btn btn-dark btn-block btn-lg gradient-custom-4">Add Unit</button>
               </div>
         </form>
     </div>    
