--- a/crm-project-front/src/app/components/bulding/bulding.component.html
+++ b/crm-project-front/src/app/components/bulding/bulding.component.html
@@ -1,22 +1,33 @@
 <div class="container-fluid p-3 text-center">
-    <div class="col-12 bg-light card">
+    <div class="bg-light card">
         <h2 class="text-uppercase text-center mb-5">Bulding Units</h2>
-        <div class="form-outline col-12 col-lg-4 p-2">
-            <select name="" class="form-control form-control-lg" (change)="selectedFloor($event)">
-                <option value="" disabled selected>Select Floor</option>
-                <option [value]="item._id" *ngFor="let item of floors , let i = index">{{item.floorNum}}</option>
-            </select>
+        <div class="d-flex justify-content-center p-2 ">
+            <div class="form-outline col-12 col-lg-4 p-1">
+                <select name="" class="form-control form-control-lg" (change)="selectedFloor($event)">
+                    <option value="" disabled selected>Select Floor</option>
+                    <option [value]="item._id" *ngFor="let item of floors , let i = index">{{item.floorNum}}</option>
+                </select>
+                <div class="alert alert-danger" *ngIf="errFlag">No Units Found!</div>
+            </div>
+            <div class="col-12 col-lg-2 p-2">
+                <a class="btn btn-primary" routerLink="/units/add/{{floorId}}">Add Unit</a>
+            </div>
         </div>
+       
      <div class="row p-3">
         <div class="p-3 col-12 col-lg-4" *ngFor="let item of units , let i = index">
             <div class="bg-dark text-light card p-2">
-               <a routerLink="/unit/{{item._id}}"> <img src="{{baseUrl+item.unitImages[0]}}" class="col-12" height="300" alt=""> </a>
+               <a routerLink="/units/{{item._id}}"> <img src="{{baseUrl+item.unitImages[0]}}" class="col-12" height="300" alt=""> </a>
                 <h4>Unit no : {{item.unitNum}}</h4>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-4 p-2"><a class="btn btn-success col-12" routerLink="/units/update/{{item._id}}">Edit</a></div>
+                <div class="col-12 col-lg-4 p-2"><a class="btn btn-danger col-12" (click)="deleteUnit(item._id , i)">Delete</a></div>
             </div>
          <div class="p-3 col-12 col-lg-4" *ngFor="let item of images , let i = index">
              <div class="bg-dark text-light card p-2">
                  <img src="{{baseUrl+item}}" class="col-12" height="300" alt="">
              </div>
-         </div>
+         </div> 
      </div>
      </div>    
