--- a/crm-project-front/src/app/components/bulding/bulding.component.html
+++ b/crm-project-front/src/app/components/bulding/bulding.component.html
@@ -24,10 +24,23 @@
                 <div class="col-12 col-lg-4 p-2"><a class="btn btn-success col-12" routerLink="/units/update/{{item._id}}">Edit</a></div>
                 <div class="col-12 col-lg-4 p-2"><a class="btn btn-danger col-12" (click)="deleteUnit(item._id , i)">Delete</a></div>
             </div>
-         <div class="p-3 col-12 col-lg-4" *ngFor="let item of images , let i = index">
-             <div class="bg-dark text-light card p-2">
-                 <img src="{{baseUrl+item}}" class="col-12" height="300" alt="">
-             </div>
-         </div> 
      </div>
+
+     <div class="row p-3">
+        <h3>Bulding Images:</h3>
+        <div class="p-3 col-12 col-lg-4" *ngFor="let item of images , let i = index">
+            <div class="bg-dark text-light card p-2">
+                <img src="{{baseUrl+item}}" class="col-12" height="300" width="400" alt="">
+                <div class="d-flex justify-content-center p-3"> <button class="btn btn-danger" (click)="deleteImage(i)">Delete</button> </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center">
+           <div class="col-12 col-lg-6 p-1">
+           <input type="file" multiple class="form-control form-control-lg" (change)="imageUpload($event)">
+       </div>
+       <div class="col-12 col-lg-2 p-2">
+           <button class="btn btn-dark col-12" (click)="addImages()">Add Images</button>
+       </div>
+        </div>
+    </div>
      </div>    
