--- a/crm-project-front/src/app/components/single-user/single-user.component.html
+++ b/crm-project-front/src/app/components/single-user/single-user.component.html
@@ -1,23 +1,46 @@
-<div class="container p-3">
-    <div class="row d-flex col-12 justify-content-center align-items-center">
-    <div class="col-12 col-lg-6 bg-light card p-3">
-        <i class="bi bi-person-fill"></i>
-        <h5>{{userData.fName+" "+userData.lName}}</h5>
-        <h6 class="text-gray">National ID : {{userData.userName}}</h6>
-        <h6>Phone : {{userData.phone}}</h6>
-        <h6>Type : {{userData.role.roleName}}</h6>
-        <div class="row">
-            <div class="p-2 col-12 col-lg-4">
-                <a class="btn btn-primary col-12">Units</a> 
-            </div>
-            <div class="p-2 col-12 col-lg-4">
-               <a class="btn btn-success col-12">Edit</a> 
-           </div>
-            <div class="p-2 col-12 col-lg-4">
-               <a class="btn btn-danger col-12">Delete</a> 
-           </div>
-           </div>
-        </div>
 
+<div class="d-flex container-fluid p-3">
+    <div class="p-2 bg-light col-12">
+        <h3> <i class="bi bi-person-fill"></i> {{userData.fName+" "+ userData.lName}}</h3>
+        <h6>National ID : {{userData.userName}}</h6>
+        <h6>Phone : : {{userData.phone}}</h6>
+        <hr>
+        <div>
+            <h5><i class="bi bi-coin"></i> Sales :</h5>
+            <div class="-flex flex-row p-2 col-12 col-lg-3">
+                <div class="card p-2 col-12 text-center" *ngFor="let item of userSales , let i = index">
+                    <p>Unit Number : {{item.unitNum}}</p>
+                    <p>Downpayment : {{item.downPayment}}</p>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div>
+            <h5><i class="bi bi-house-fill"></i> Units :</h5>
+            <div class="flex-column p-2">
+                <div class="card p-2" *ngFor="let item of userUnits , let i = index">
+                    <p>Unit Number : {{item.unitNum}}</p>
+                    <p>Downpayment : {{item.downPayment}}</p>
+                    <div class="d-flex flex-row">
+                        <div class="p-2 col-12 col-lg-2 text-center" *ngFor="let payment of item.payments">
+                            <div class="card alert alert-dark">
+                                <p>Payment no : {{payment.paymentNum}}</p>
+                                <p>Value : {{payment.paymentValue}} EGP</p>
+                                <p *ngIf="payment.paymentStat">Status : Paid</p>
+                                <p *ngIf="!payment.paymentStat">Status : Not paid</p>
+                                <div class="justify-content-center col-12">
+                                    <div class="col-12 p-2">
+                                        <a class="btn btn-dark col-12" (click)="paymentStatus(payment._id , i)">Change Status</a>
+                                    </div>
+                                    <div class="col-12 p-2">
+                                        <a class="btn btn-dark col-12">Invoice</a>
+                                    </div>
+                                     </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
