--- a/crm-project-front/src/app/components/users/users.component.html
+++ b/crm-project-front/src/app/components/users/users.component.html
@@ -19,9 +19,9 @@
              </div>
          </div> -->
 
-         <div class="col-12 p-3 row">
+         <div class="col-12 p-3 d-flex flex-row"> 
             <div class="col-12 col-lg-4 p-3" *ngFor="let item of usersData , let i = index">
-                <div class="bg-light card p-3">
+                <div class="bg-light p-3">
                 <i class="bi bi-person-fill"></i>
                 <h5>{{item.fName+" "+item.lName}}</h5>
                 <hr>
@@ -30,10 +30,10 @@
                 <h6>Type : {{item.role.roleName}}</h6>
                 <div class="row">
                     <div class="p-2 col-12 col-lg-4">
-                        <a class="btn btn-primary col-12">Units</a> 
+                        <a class="btn btn-primary col-12" routerLink="/users/{{item._id}}">view</a> 
                     </div>
                     <div class="p-2 col-12 col-lg-4">
-                       <a class="btn btn-success col-12">Edit</a> 
+                       <a class="btn btn-success col-12" routerLink="/users/update/{{item._id}}">Edit</a> 
                    </div>
                     <div class="p-2 col-12 col-lg-4">
                        <a class="btn btn-danger col-12" (click)="deleteUser(item._id , i)">Delete</a> 
