--- a/crm-project-front/src/app/components/single-unit/single-unit.component.html
+++ b/crm-project-front/src/app/components/single-unit/single-unit.component.html
@@ -4,7 +4,7 @@
      <h4>Unit Size : {{unitData.unitSize}}</h4>
      <h4>unit Price : {{unitData.price}}</h4>
      <p>{{unitData.unitDescription}}</p>
-     <div class="d-flex justify-content-center">
+     <div class="d-flex justify-content-center" *ngIf="userType == 'employee'">
     <div class="col-12 col-lg-2 p-2">
         <a class="btn btn-dark col-12" routerLink="/units/sell/{{unitData._id}}">Sell Unit</a>
     </div>
@@ -21,10 +21,10 @@
          <div class="p-3 col-12 col-lg-4" *ngFor="let item of images , let i = index">
              <div class="bg-dark text-light card p-2">
                  <img src="{{baseUrl+item}}" class="col-12" height="300" width="400" alt="">
-                 <div class="d-flex justify-content-center p-3"> <button class="btn btn-danger" (click)="deleteImage(i)">Delete</button> </div>
+                 <div class="d-flex justify-content-center p-3" *ngIf="userType == 'employee'"> <button class="btn btn-danger" (click)="deleteImage(i)">Delete</button> </div>
              </div>
          </div>
-         <div class="d-flex justify-content-center">
+         <div class="d-flex justify-content-center" *ngIf="userType == 'employee'">
             <div class="col-12 col-lg-6 p-1">
             <input type="file" multiple class="form-control form-control-lg" (change)="imageUpload($event)">
         </div>
