--- a/crm-project-front/src/app/components/home/home.component.html
+++ b/crm-project-front/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="d-flex flex-row bg-img col-12 p-3">
-  <div class="overflow-hidden p-3 p-md-5 bg-light col-12 col-lg-6">
+  <div class="overflow-hidden p-3 p-md-5 bg-light col-12">
     <div class="p-lg-5 mx-auto my-5">
       <h1 class="display-4 font-weight-normal">Company name</h1>
       <p class="lead font-weight-normal">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque unde eos excepturi quasi est voluptatum commodi obcaecati repellendus ea sint nihil sed tempore ut, nam ipsum temporibus modi. Architecto, animi?</p>
