--- a/crm-project-front/src/app/components/login/login.component.html
+++ b/crm-project-front/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
 
                 <div class="d-flex justify-content-center">
                   <button type="submit"
-                    class="btn btn-dark btn-block btn-lg gradient-custom-4 text-success">Login</button>
+                    class="btn btn-dark btn-block btn-lg gradient-custom-4">Login</button>
                 </div>
 
               </form>
