--- a/crm-project-front/src/app/components/projects/projects.component.html
+++ b/crm-project-front/src/app/components/projects/projects.component.html
@@ -8,7 +8,7 @@
             <div class="card-body text-center"> 
                 <h3>{{item.projectName}}</h3>
             </div>
-            <div class="row p-2">
+            <div class="row p-2" *ngIf="userType == 'employee'">
                 <div class="p-2 col-12 col-lg-6">
                    <a class="btn btn-success col-12" routerLink="/projects/update/{{item._id}}">Edit</a> 
                </div>
@@ -19,5 +19,5 @@
         </div>
     </div>
 </div> 
-<div class="row d-flex col-12 justify-content-center align-items-center p-3"><a class="col-12 col-lg-2 btn btn-dark" routerLink="/addproject">Add Project</a></div>
+<div class="row d-flex col-12 justify-content-center align-items-center p-3" *ngIf="userType == 'employee'"><a class="col-12 col-lg-2 btn btn-dark" routerLink="/addproject">Add Project</a></div>
     
