--- a/crm-project-front/src/app/components/single-user/single-user.component.html
+++ b/crm-project-front/src/app/components/single-user/single-user.component.html
@@ -5,7 +5,7 @@
         <h6>National ID : {{userData.userName}}</h6>
         <h6>Phone : : {{userData.phone}}</h6>
         <hr>
-        <div>
+        <div *ngIf="userType == 'employee'">
             <h5><i class="bi bi-coin"></i> Sales :</h5>
             <div class="-flex flex-row p-2 col-12 col-lg-3">
                 <div class="card p-2 col-12 text-center" *ngFor="let item of userSales , let i = index">
@@ -13,8 +13,9 @@
                     <p>Downpayment : {{item.downPayment}}</p>
                 </div>
             </div>
+            <hr>
         </div>
-        <hr>
+        
         <div>
             <h5><i class="bi bi-house-fill"></i> Units :</h5>
             <div class="flex-column p-2">
