--- a/crm-project-front/src/app/components/update-user/update-user.component.html
+++ b/crm-project-front/src/app/components/update-user/update-user.component.html
@@ -40,12 +40,12 @@
                   <div class="alert alert-danger" *ngIf="(Data?.['phone']?.dirty || submitFlag) && Data?.['phone']?.errors?.['pattern']"><p>Invalid Phone Number</p></div>
                 </div>
 
-                <div class="form-outline my-2">
-                    <select class="form-control form-control-lg" (change)="selectedRole($event)" formControlName="role">
+                <div class="form-outline my-2" *ngIf="userRole == 'play'">
+                    <select class="form-control form-control-lg" (change)="selectedRole($event)">
                       <option value="" disabled selected>Select Role</option>
                         <option [value]="i" *ngFor="let item of roles , let i = index" >{{item.roleName}}</option>
                       </select>
-                      <div class="alert alert-danger" *ngIf="submitFlag && Data?.['role']?.errors?.['required']"><p>Reqired</p></div>
+                      
                   </div>
                 <!-- <div class="form-outline mb-4 col-12 col-md-6 col-lg-6 my-2">
                   <input type="password" class="form-control form-control-lg" placeholder="Repeat password" formControlName="rePassword" />
