--- a/crm-project-front/src/app/components/bulding/bulding.component.html
+++ b/crm-project-front/src/app/components/bulding/bulding.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-3 text-center">
-    <div class="bg-light card">
+    <div class="bg-light">
         <h2 class="text-uppercase text-center mb-5">Bulding Units</h2>
-        <div class="d-flex justify-content-center p-2 ">
+        <div class=" p-2 ">
             <div class="form-outline col-12 col-lg-4 p-1">
                 <select name="" class="form-control form-control-lg" (change)="selectedFloor($event)">
                     <option value="" disabled selected>Select Floor</option>
@@ -10,31 +10,33 @@
                 <div class="alert alert-danger" *ngIf="errFlag">No Units Found!</div>
             </div>
             <div class="col-12 col-lg-2 p-2" *ngIf="userType == 'employee'">
-                <a class="btn btn-primary" routerLink="/units/add/{{floorId}}">Add Unit</a>
+                <a class="btn btn-dark col-12" routerLink="/units/add/{{floorId}}"><i class="bi bi-house-add"></i>  Add Unit</a>
             </div>
         </div>
        
      <div class="row p-3">
-        <div class="p-3 col-12 col-lg-4" *ngFor="let item of units , let i = index">
-            <div class="bg-dark text-light card p-2">
+        <div class="text-light p-1 col-12 col-lg-4" *ngFor="let item of units , let i = index">
+            
                <a routerLink="/units/{{item._id}}"> <img src="{{baseUrl+item.unitImages[0]}}" class="col-12" height="300" alt=""> </a>
-                <h4>Unit no : {{item.unitNum}}</h4>
+               <div class="p-2 bg-dark"> 
+               <h4>Unit no : {{item.unitNum}}</h4>
             </div>
+            
             <div class="row" *ngIf="userType == 'employee'">
-                <div class="col-12 col-lg-4 p-2"><a class="btn btn-success col-12" routerLink="/units/update/{{item._id}}">Edit</a></div>
-                <div class="col-12 col-lg-4 p-2"><a class="btn btn-danger col-12" (click)="deleteUnit(item._id , i)">Delete</a></div>
+                <div class="col-12 col-lg-4 p-2"><a class="btn btn-dark col-12" routerLink="/units/update/{{item._id}}">Edit</a></div>
+                <div class="col-12 col-lg-4 p-2"><a class="btn btn-dark col-12" (click)="deleteUnit(item._id , i)">Delete</a></div>
             </div>
      </div>
 
      <div class="row p-3">
         <h3>Bulding Images:</h3>
-        <div class="p-3 col-12 col-lg-4" *ngFor="let item of images , let i = index">
-            <div class="bg-dark text-light card p-2">
+        <div class="p-1 col-12 col-lg-4" *ngFor="let item of images , let i = index">
+           
                 <img src="{{baseUrl+item}}" class="col-12" height="300" width="400" alt="">
                 <div class="d-flex justify-content-center p-3" *ngIf="userType == 'employee'"> <button class="btn btn-danger" (click)="deleteImage(i)">Delete</button> </div>
-            </div>
+            
         </div>
-        <div class="d-flex justify-content-center" *ngIf="userType == 'employee'">
+        <div *ngIf="userType == 'employee'">
            <div class="col-12 col-lg-6 p-1">
            <input type="file" multiple class="form-control form-control-lg" (change)="imageUpload($event)">
        </div>
@@ -43,4 +45,7 @@
        </div>
         </div>
     </div>
-     </div>    
+     </div>
+    </div> 
+</div>
+       
