--- a/crm-project-front/src/app/components/projects/projects.component.html
+++ b/crm-project-front/src/app/components/projects/projects.component.html
@@ -1,23 +1,28 @@
 
-<div class="row container-fluid p-3">
+<div class="container-fluid">
+    <div class=" p-3 row">
     <div class="col-12 col-lg-4 " *ngFor="let item of projects , let i = index" >
-        <div class="card p-2">
-            <a routerLink="/projects/{{item._id}}">
-                <img src={{baseUrl+item.projectImages[0]}} height="400" class="card-img-top">
-            </a>
-            <div class="card-body text-center"> 
-                <h3>{{item.projectName}}</h3>
+        
+        <div class="bg-light text-center"> 
+                <a routerLink="/projects/{{item._id}}">
+                    <img src={{baseUrl+item.projectImages[0]}} height="400" class="card-img-top">
+                </a>
+                <div class="p-2">
+                <h3>{{item.projectName}}, {{item.projectLocation}}</h3>
             </div>
-            <div class="row p-2" *ngIf="userType == 'employee'">
-                <div class="p-2 col-12 col-lg-6">
-                   <a class="btn btn-success col-12" routerLink="/projects/update/{{item._id}}">Edit</a> 
-               </div>
-                <div class="p-2 col-12 col-lg-6">
-                   <a class="btn btn-danger col-12" (click)="deleteProject(item._id , i)">Delete</a> 
-               </div>
-               </div>
-        </div>
+                <div class="row p-3" *ngIf="userType == 'employee'">
+                    <div class="p-2 col-6">
+                        <a class="btn btn-dark col-12" routerLink="/projects/update/{{item._id}}">Edit</a> 
+                    </div>
+                    <div class="p-2 col-6">
+                        <a class="btn btn-dark col-12" (click)="deleteProject(item._id , i)">Delete</a> 
+                    </div>
+                </div>
+            </div>
+        
     </div>
+</div>
 </div> 
-<div class="row d-flex col-12 justify-content-center align-items-center p-3" *ngIf="userType == 'employee'"><a class="col-12 col-lg-2 btn btn-dark" routerLink="/addproject">Add Project</a></div>
+
+<div class="d-flex col-12 justify-content-center align-items-center p-3" *ngIf="userType == 'employee'"><a class="col-12 col-lg-2 btn btn-dark" routerLink="/addproject">Add Project</a></div>
     
