--- a/crm-project-front/src/app/components/roles/roles.component.html
+++ b/crm-project-front/src/app/components/roles/roles.component.html
@@ -1,1 +1,26 @@
-<p>roles works!</p>
+
+<div class="container-fluid">
+    <div class="p-3 row">
+       <h3>Roles :</h3> 
+       <div class="col-12 col-lg-3 p-3" *ngFor="let item of rolesData , let i = index">
+           <div class="bg-light p-3">
+           <h5><i class="bi bi-shield-lock"></i> {{item.roleName}}</h5>
+           <hr>
+           <!-- <h6 class="text-gray">National ID : {{item.userName}}</h6>
+           <h6>Phone : {{item.phone}}</h6>
+           <h6>Type : {{item.role.roleName}}</h6> -->
+           <div class="row">
+               <div class="p-2 col-6">
+                  <a class="btn btn-dark col-12" routerLink="/users/update/{{item._id}}">Edit</a> 
+              </div>
+               <div class="p-2 col-6">
+                  <a class="btn btn-dark col-12" (click)="deleteRole(item._id , i)">Delete</a> 
+              </div>
+              </div>
+           </div>
+       </div>
+       </div>
+   </div>
+
+   <div class="d-flex col-12 justify-content-center align-items-center p-3"><a class="col-12 col-lg-2 btn btn-dark" routerLink="/add/role">Add Role</a></div>
+ 
