--- a/crm-project-front/src/app/components/single-unit/single-unit.component.html
+++ b/crm-project-front/src/app/components/single-unit/single-unit.component.html
@@ -1,17 +1,17 @@
-<div class="container-fluid p-3 text-center">
-    <div class="col-12 bg-light card">
+<div class=" container-fluid p-3 text-center">
+    <div class="col-12 bg-light">
      <h1>Unit Number : {{unitData.unitNum}}</h1>
      <h4>Unit Size : {{unitData.unitSize}}</h4>
      <h4>unit Price : {{unitData.price}}</h4>
      <p>{{unitData.unitDescription}}</p>
-     <div class="d-flex justify-content-center" *ngIf="userType == 'employee'">
-    <div class="col-12 col-lg-2 p-2">
+     <div class="d-flex flex-row col-12" *ngIf="userType == 'employee'">
+    <div class="col-4 p-2">
         <a class="btn btn-dark col-12" routerLink="/units/sell/{{unitData._id}}">Sell Unit</a>
     </div>
-    <div class="col-12 col-lg-2 p-2">
+    <div class="col-4 p-2">
         <a class="btn btn-dark col-12" routerLink="">Edit Unit</a>
     </div>
-    <div class="col-12 col-lg-2 p-2">
+    <div class="col-4 p-2">
         <a class="btn btn-dark col-12">Delete Unit</a>
     </div>
      </div>
@@ -19,12 +19,12 @@
      <div class="row p-3">
          <h3>Unit Images:</h3>
          <div class="p-3 col-12 col-lg-4" *ngFor="let item of images , let i = index">
-             <div class="bg-dark text-light card p-2">
+             
                  <img src="{{baseUrl+item}}" class="col-12" height="300" width="400" alt="">
                  <div class="d-flex justify-content-center p-3" *ngIf="userType == 'employee'"> <button class="btn btn-danger" (click)="deleteImage(i)">Delete</button> </div>
-             </div>
+             
          </div>
-         <div class="d-flex justify-content-center" *ngIf="userType == 'employee'">
+         <div  *ngIf="userType == 'employee'">
             <div class="col-12 col-lg-6 p-1">
             <input type="file" multiple class="form-control form-control-lg" (change)="imageUpload($event)">
         </div>
