--- a/crm-project-front/src/app/components/update-user/update-user.component.html
+++ b/crm-project-front/src/app/components/update-user/update-user.component.html
@@ -1,8 +1,4 @@
-<section class="vh-100 bg-image"
-  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="row d-flex justify-content-center align-items-center p-3">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5 " >
@@ -40,7 +36,7 @@
                   <div class="alert alert-danger" *ngIf="(Data?.['phone']?.dirty || submitFlag) && Data?.['phone']?.errors?.['pattern']"><p>Invalid Phone Number</p></div>
                 </div>
 
-                <div class="form-outline my-2" *ngIf="userRole == 'play'">
+                <div class="form-outline my-2" *ngIf="userRole == 'superadmin'">
                     <select class="form-control form-control-lg" (change)="selectedRole($event)">
                       <option value="" disabled selected>Select Role</option>
                         <option [value]="i" *ngFor="let item of roles , let i = index" >{{item.roleName}}</option>
@@ -62,6 +58,3 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
